Fixed styling issue where buttons wouldn't style on iOS

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,6 +35,7 @@ p {
 }
 
 .buttons {
+    -webkit-appearance: none; 
     position: relative;
 	display: inline-block;
 	font-size: 22px;
@@ -55,6 +56,7 @@ p {
 				0 8px 8px 1px rgba(0,0,0,0.5);
 }
 .buttons:active {
+    -webkit-appearance: none; 
 	box-shadow: 0 0 0 1px #cb99c5 inset,
 				0 0 0 2px rgba(255,255,255,0.15) inset,
                 0 0 0 1px rgba(0,0,0,0.4);
@@ -62,6 +64,7 @@ p {
 }
 
 #reset {
+    -webkit-appearance: none; 
     position: relative;
 	display: inline-block;
 	font-size: 16px;
@@ -83,6 +86,7 @@ p {
 }
 
 #reset:active {
+    -webkit-appearance: none; 
 	box-shadow: 0 0 0 1px #cb99c5 inset,
 				0 0 0 2px rgba(255,255,255,0.15) inset,
                 0 0 0 1px rgba(0,0,0,0.4);
